--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -54,9 +54,9 @@
       <!-- <a *ngIf="Islogged" mat-list-item >About Us</a>
       <a *ngIf="Islogged"  mat-list-item >Contact</a> -->
 
-      <!-- <button [ngClass]="{'active': botonLan()  === true}" (click)="cambiarLenguaje('es')">Español</button>
+      <button [ngClass]="{'active': botonLan()  === true}" (click)="cambiarLenguaje('es')">Español</button>
 
-       <button [ngClass]="{'active': botonLan() === false}" (click)="cambiarLenguaje('en')">Inglés</button> -->
+       <button [ngClass]="{'active': botonLan() === false}" (click)="cambiarLenguaje('en')">Inglés</button>
       <!-- {{ Islogged }} -->
 
       <button  *ngIf="Islogged" (click)="salir()">    Salir  </button>
