--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,6 +2,7 @@
      <app-main-nav>
      </app-main-nav>
                
+
      <div class="wrapper">
                <div class="wrapper-left">
                   
@@ -18,37 +19,43 @@
                                    
                                    <form [formGroup]="forma" autocomplete="off" (ngSubmit)="onSubmit()"
                                         #form="ngForm">
-                                        <mat-form-field class="example-full-width">
-                                             <mat-label>Email</mat-label>
-                                             <input 
-                                                  matInput 
-                                                  type="email"
-                                                  placeholder="email@mail.com" 
-                                                  name="email"
-                                                  minlength="6"
-                                                  formControlName="email"
-                                                  >
-                                        </mat-form-field>
+                                        <div class="cont-input">
+                                             <mat-form-field class="example-full-width">
+                                                  <mat-label>User ID</mat-label>
+                                                  <input 
+                                                       matInput 
+                                                       type="email"
+                                                       placeholder="edin.brin" 
+                                                       name="email"
+                                                       minlength="6"
+                                                       formControlName="email"
+                                                       >
+                                                  </mat-form-field>
+                                                  <small *ngIf="inputNoValido">{{ 'principal.invalidUser' | translate }}</small>
+
+                                        </div>
                                         
                                         <!-- <an-text class="div-an-text" [name]="'nombre'" [label]="'nombre'"   placeholder="email@mail.com" ></an-text>                                       -->
                                              <!-- <span *ngIf="form.submitted  && form.controls['email'].errors">Email requerido </span> -->
-                                      
-                                        <mat-form-field class="example-full-width">
-                                             <mat-label>Password</mat-label>
-                                             <input 
-                                                  matInput  
-                                                  placeholder="********" 
-                                                  type="password"
-                                                  name="password" 
-                                                  minlength="6"
-                                                  formControlName="password"
-                         
-                                                  >
-                                        </mat-form-field>
+                                        <div class="cont-input">
+                                             <mat-form-field class="example-full-width">
+                                                  <mat-label>Password</mat-label>
+                                                  <input 
+                                                       matInput  
+                                                       placeholder="********" 
+                                                       type="password"
+                                                       name="password" 
+                                                       minlength="6"
+                                                       formControlName="password"
+                                                       >
+                                             </mat-form-field>
+                                        
+                                             <small *ngIf="passNoValido">{{ 'principal.invalidPass' | translate }}</small>
+                                        </div>
                                         
                                         
                                         
-                                        <button mat-raised-button color="primary" class="login" type="submit">Log In</button>
+                                        <button mat-raised-button color="primary" class="login" type="submit"[disabled]="!forma.valid">Login</button>
                                         
                                         <!-- <an-button [className]="'success'" type="submit">Log In</an-button> -->
 
