CAmbios para conexion a servidor

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,7 +43,9 @@
                                                             
                                                             <button   mat-button  
                                                                       matTooltip="Move to Blacklist"
-                                                                      aria-label="Button that displays a tooltip when focused or hovered over">
+                                                                      aria-label="Button that displays a tooltip when focused or hovered over"
+                                                                      (click)="moveToBlackList()"
+                                                                      >
                                                                  <mat-icon>flag</mat-icon>
                                                             </button>
                                                             
