--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,9 +24,9 @@
                                                   <mat-label>User ID</mat-label>
                                                   <input 
                                                        matInput 
-                                                       type="email"
+                                                       type="text"
                                                        placeholder="edin.brin" 
-                                                       name="email"
+                                                       name="user"
                                                        minlength="6"
                                                        formControlName="email"
                                                        >
@@ -45,7 +45,7 @@
                                                        placeholder="********" 
                                                        type="password"
                                                        name="password" 
-                                                       minlength="6"
+                                                       minlength="5"
                                                        formControlName="password"
                                                        >
                                              </mat-form-field>
