--- a/src/app/abc-atta/abc-atta.component.html
+++ b/src/app/abc-atta/abc-atta.component.html
@@ -10,59 +10,52 @@
                </mat-drawer>
                <mat-drawer-content class="content animated fadeIn">
                     
-<mat-horizontal-stepper labelPosition="bottom" #stepper>
-          <!-- <div class="titulo"> -->
-                    <ng-container matColumnDef="position">
-                              <th > No. </th>
-                              <td mat-cell *matCellDef="let element"> hola </td>
-                            </ng-container>
-          <!-- </div> -->
-          <mat-step [stepControl]="firstFormGroup">
-                    <form autocomplete="off"  [formGroup]="firstFormGroup" >
-                    <!-- <form autocomplete="off"  [formGroup]="firstFormGroup" (ngSubmit)="guardar()"> -->
-                              <div class="form-row">
-                                   
-                                   <div class="cont-input">
-                                        <mat-form-field class="example-full-width">
-                                                  <mat-label>User</mat-label>
-                                                  <input 
-                                                       matInput 
-                                                       type="text"
-                                                       placeholder="User" 
-                                                       name="user"
-                                                       required
-                                                       formControlName="user"
-                                                       >
-                                        </mat-form-field>
-                                   </div>    
-                                   <div class="cont-input">
-                                        <mat-form-field class="example-full-width">
-                                             <mat-label>First Name</mat-label>
+                    <h2>Create User</h2>
+                    <h3>Fill all the necesary data to create a new user</h3>
+
+                    <form autocomplete="off"  [formGroup]="firstFormGroup" class="alta-form">
+                         <div class="form-row">        
+                              <div class="cont-input">
+                                   <mat-form-field class="example-full-width">
+                                             <mat-label>User</mat-label>
                                              <input 
                                                   matInput 
                                                   type="text"
-                                                  placeholder="First Name" 
-                                                  name="name"
+                                                  placeholder="User" 
+                                                  name="user"
                                                   required
-                                                  formControlName="firstName"
+                                                  formControlName="user"
                                                   >
-                                        </mat-form-field>
-                                   </div>    
-                                   <div class="cont-input">
-                                        <mat-form-field class="example-full-width">
-                                             <mat-label>Last Name</mat-label>
-                                             <input 
-                                                  matInput 
-                                                  type="text"
-                                                  placeholder="Last Name" 
-                                                  name="last_name"
-                                                  required
-                                                  formControlName="lastName"
+                                   </mat-form-field>
+                              </div>    
+                              <div class="cont-input">
+                                   <mat-form-field class="example-full-width">
+                                        <mat-label>First Name</mat-label>
+                                        <input 
+                                             matInput 
+                                             type="text"
+                                             placeholder="First Name" 
+                                             name="name"
+                                             required
+                                             formControlName="firstName"
                                              >
-                                        </mat-form-field>
-                                   </div>    
-                              </div>
-                              <div class="form-row">
+                                   </mat-form-field>
+                              </div>    
+                              <div class="cont-input">
+                                   <mat-form-field class="example-full-width">
+                                        <mat-label>Last Name</mat-label>
+                                        <input 
+                                             matInput 
+                                             type="text"
+                                             placeholder="Last Name" 
+                                             name="last_name"
+                                             required
+                                             formControlName="lastName"
+                                        >
+                                   </mat-form-field>
+                              </div>    
+                         </div>
+                         <div class="form-row">
                                    <div class="cont-input">
                                         <mat-form-field class="example-full-width">
                                              <mat-label>Email</mat-label>
@@ -97,37 +90,36 @@
                                                   </mat-option>
                                              </mat-select>
                                         </mat-form-field>
-                                   </div>    
-                                        
-                              </div>
-                              <div>
-                                   <button mat-button matStepperNext>Next</button>
-                              </div>
+                                   </div>        
+                         </div>
+                         <div class="form-row">        
+                              <div class="cont-input">
+                                   <mat-form-field appearance="fill">
+                                        <mat-label>Select a Level</mat-label>
+                                        <mat-select required formControlName="business">
+                                             <mat-option *ngFor="let busine of business"  [value]="busine.value">
+                                                  {{busine.viewValue}}
+                                             </mat-option>
+                                        </mat-select>
+                                   </mat-form-field>
+                              </div>    
+                              <div class="cont-input">
+                                   
+                              </div>    
+                              <div class="cont-input">
+                                   
+                              </div>    
+                         </div>
+                         <div class="form-row" style="
+                         display: flex;
+                         align-items: flex-end;
+                         justify-content: flex-end;
+                     "> 
+                              <button mat-raised-button color="primary" class="login" disabled=true type="submit"> Cancel </button>
+                              <button mat-raised-button color="primary" class="login" type="submit"> Save </button>
+                         </div>
                     </form>
-          </mat-step>
-          <mat-step [stepControl]="secondFormGroup" id="carlos">
-            <form [formGroup]="secondFormGroup">
-              <!-- <ng-template matStepLabel>Fill out your address</ng-template> -->
-              <mat-form-field>
-                <mat-label>Address</mat-label>
-                <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
-                       required>
-              </mat-form-field>
-              <div>
-                <button mat-button matStepperPrevious>Back</button>
-                <button mat-button matStepperNext>Next</button>
-              </div>
-            </form>
-          </mat-step>
-          <mat-step>
-            <!-- <ng-template matStepLabel>Done</ng-template> -->
-            <p>You are now done.</p>
-            <div>
-              <button mat-button matStepperPrevious>Back</button>
-              <button mat-button (click)="stepper.reset()">Reset</button>
-            </div>
-          </mat-step>
-</mat-horizontal-stepper>
+
         
 
 
