--- a/src/app/abc-atta/abc-atta.component.scss
+++ b/src/app/abc-atta/abc-atta.component.scss
@@ -63,6 +63,22 @@
 }
 
 
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+
+
 ::ng-deeo.mat-form-field-wrapper{
      position: relative;
      height: 40px !important;
