--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,6 +30,7 @@
                                                        minlength="6"
                                                        formControlName="email"
                                                        >
+                                                       <mat-icon matSuffix *ngIf="inputNoValido" style="color:red">error_outline</mat-icon>
                                                   </mat-form-field>
                                                   <small *ngIf="inputNoValido">{{ 'principal.invalidUser' | translate }}</small>
 
@@ -48,8 +49,8 @@
                                                        minlength="5"
                                                        formControlName="password"
                                                        >
+                                                       <mat-icon matSuffix *ngIf="passNoValido" style="color:red">error_outline</mat-icon>
                                              </mat-form-field>
-                                        
                                              <small *ngIf="passNoValido">{{ 'principal.invalidPass' | translate }}</small>
                                         </div>
                                         
